--- a/form/index.html
+++ b/form/index.html
@@ -46,7 +46,7 @@
                     </div>
                     <div class="freigeben">
                         <label id="Daten freigeben">Daten</label>
-                        <input type=checkbox class=hidden id=P_Freigeben name=Freigeben>
+                        <input type=checkbox class=hidden id=P_Freigeben name=Freigeben checked>
                         <label class="buttonlabel zyklus" for=P_Freigeben>freigeben</label>
                     </div>
                 </div>
@@ -189,31 +189,19 @@
                 <!-- SITUATIONS -->
                 <label class="itemLabel situation" for=situation>Situation: </label>
                 <div id=SituationCheckboxes>
-
-                    <input type=checkbox class=hidden id=value11 name=[situations][0] value=Zuhause>
-                    <label class="buttonlabel situation" for=value11>Zuhause</label>
-                    <input type=checkbox class=hidden id=value21 name=situations[1] value=Arbeit>
-                    <label class="buttonlabel situation" for=value21>Arbeit</label>
-                    <input type=checkbox class=hidden id=value31 name=situations[2] value=Park>
-                    <label class="buttonlabel situation" for=value31>Park</label>
-                    <input type=checkbox class=hidden id=value41 name=situations[3] value=Klo>
-                    <label class="buttonlabel situation" for=value41>Klo</label>
-                    <input type=checkbox class=hidden id=value51 name=situations[4] value=Bett>
-                    <label class="buttonlabel situation" for=value51>Bett</label>
-                    <input type=text class=newSituation name=situations[] placeholder='new situation'>
                 </div>
 
 
                 <div class="MoodSlider">
                     <label class="itemLabel brainload" for=brainloadSlider>Brainload: </label>
                     <div class=sliderValue id=brainloadSliderOutput></div>
-                    <input type="range" min="0" max="100" value="0" step="10" class="slider brainload" id=brainloadSlider name=brainload>
+                    <input type="range" min="0" max="100" value="0" step="10" class="slider brainload" id=brainloadSlider name=mood[brainload]>
                     <label class="itemLabel mood" for=moodSlider>Mood: </label>
                     <div class=sliderValue id=moodSliderOutput></div>
-                    <input type="range" min="0" max="100" value="0" step="10" class="slider mood" id=moodSlider name=mood>
+                    <input type="range" min="0" max="100" value="0" step="10" class="slider mood" id=moodSlider name=mood[mood]>
                     <label class="itemLabel motivation" for=motivationSlider>Motivation: </label>
                     <div class=sliderValue id=motivationSliderOutput></div>
-                    <input type="range" min="0" max="100" value="0" step="10" class="slider motivation" id=motivationSlider name=motivation>
+                    <input type="range" min="0" max="100" value="0" step="10" class="slider motivation" id=motivationSlider name=mood[motivation]>
                 </div>
                 <div class="kommentar mood">
                     <label class="itemLabel comment" for=comment>Comment: </label>
@@ -263,7 +251,14 @@
     let ProfilFormElements = document.getElementById('ProfilForm').elements;
 
     // get localData
-    var localData = JSON.parse(localStorage.getItem(localDataName)) || [];
+    var localData = JSON.parse(localStorage.getItem(localDataName)) || new Object({Profil:{},Mood:{}});
+    // deb(localData)
+    // deb(Object.values(localData.Mood), 'Mood values');
+    // deb(Object.entries(localData.Mood), 'Mood entries');
+    // var allMoods = Object.values(localData.Mood);
+    // for (const mood of allMoods) deb(mood,'allMoods')
+
+
 </script>
 <script src="js/form.js"></script>
 <script>
@@ -292,7 +287,17 @@
 
 
 
-
+                    <input type=checkbox class=hidden id=value11 name=[situations][0] value=Zuhause>
+                    <label class="buttonlabel situation" for=value11>Zuhause</label>
+                    <input type=checkbox class=hidden id=value21 name=situations[1] value=Arbeit>
+                    <label class="buttonlabel situation" for=value21>Arbeit</label>
+                    <input type=checkbox class=hidden id=value31 name=situations[2] value=Park>
+                    <label class="buttonlabel situation" for=value31>Park</label>
+                    <input type=checkbox class=hidden id=value41 name=situations[3] value=Klo>
+                    <label class="buttonlabel situation" for=value41>Klo</label>
+                    <input type=checkbox class=hidden id=value51 name=situations[4] value=Bett>
+                    <label class="buttonlabel situation" for=value51>Bett</label>
+                    <input type=text class=newSituation name=situations[] placeholder='new situation'>
 
 
 
