--- a/form/index.html
+++ b/form/index.html
@@ -251,14 +251,23 @@
     let ProfilFormElements = document.getElementById('ProfilForm').elements;
 
     // get localData
-    var localData = JSON.parse(localStorage.getItem(localDataName)) || new Object({Profil:{},Mood:{}});
+    var initObj = new Object({
+        Profil: {
+            Situations:{
+                0: 'gerade aufgewacht',
+                1: 'bei der Arbeit',
+                2: 'zuhause',
+                3: 'kann nicht schlafen',
+            }
+        },
+        Mood: {}
+    });
+    var localData = JSON.parse(localStorage.getItem(localDataName)) || initObj;
     // deb(localData)
     // deb(Object.values(localData.Mood), 'Mood values');
     // deb(Object.entries(localData.Mood), 'Mood entries');
     // var allMoods = Object.values(localData.Mood);
     // for (const mood of allMoods) deb(mood,'allMoods')
-
-
 </script>
 <script src="js/form.js"></script>
 <script>
