mergeObj for situations

--- a/form/index.html
+++ b/form/index.html
@@ -260,7 +260,8 @@
                 1: 'bei der Arbeit',
                 2: 'zuhause',
                 3: 'kann nicht schlafen',
-            }
+            },
+            Freigeben: "on",
         },
         Mood: {}
     });
@@ -275,6 +276,7 @@
 <script>
     populateProfilForm();
     populateMoodForm();
+    DataFreigeben();
 
     // showMessage(showSize());
 </script>
