--- a/form/index.html
+++ b/form/index.html
@@ -111,7 +111,7 @@
         <form id=MoodForm autocomplete="off">
             <fieldset>
                 <legend>How do you feel?</legend>
-
+                <label id="MedikationHeading" class=SectionHeading>Medikation</label>
                 <div id=Medikation_0>
                     <div class="medikation">
                         <div class="medikament">
@@ -158,27 +158,27 @@
                     </div>
 
 
-                    <details>
-                        <summary class=SpoilerMedikation>weitere Angaben</summary>
-                        <div class=medikation>
-                            <div class="seitwann">
-                                <label for="M_SeitWann[0]">seit wann</label>
-                                <input type="date" id="M_SeitWann[0]" name=Medikation[0][SeitWann]>
-                            </div>
-
-                            <div class="wirkzeit">
-                                <label>&nbsp;</label>
-                                <input type=checkbox class=hidden id=P_Wirkzeit name=Medikation[0][Wirkzeit]>
-                                <label class="buttonlabel wirkzeit" for=P_Wirkzeit>innerhalb der Wirkzeit</label>
-                            </div>
-
-
+                    <!-- <details>
+                        <summary class=SpoilerMedikation>weitere Angaben</summary> -->
+                    <div class=medikation>
+                        <div class="seitwann">
+                            <label for="M_SeitWann[0]">seit wann</label>
+                            <input type="date" id="M_SeitWann[0]" name=Medikation[0][SeitWann]>
                         </div>
-                        <div class="kommentar medikament">
-                            <label class="itemLabel comment" for=M_Kommentar[0]>Anmerkungen: </label>
-                            <textarea id="M_Kommentar[0]" name=Medikation[0][Kommentar]></textarea>
+
+                        <div class="wirkzeit">
+                            <label>&nbsp;</label>
+                            <input type=checkbox class=hidden id=P_Wirkzeit[0] name=Medikation[0][Wirkzeit]>
+                            <label class="buttonlabel wirkzeit" for=P_Wirkzeit[0]>innerhalb der Wirkzeit</label>
                         </div>
-                    </details>
+
+
+                    </div>
+                    <div class="kommentar medikament">
+                        <label class="itemLabel comment" for=M_Kommentar[0]>Anmerkungen zur Medikation</label>
+                        <textarea id="M_Kommentar[0]" name=Medikation[0][Kommentar]></textarea>
+                    </div>
+                    <!-- </details> -->
 
 
 
@@ -189,27 +189,22 @@
                 </div>
 
                 <!-- SITUATIONS -->
-                <label class="itemLabel situation" for=situation>Situation: </label>
+                <label id="SituationHeading" class=SectionHeading>Situation</label>
+
+                <!-- <label class="itemLabel situation" for=situation>Situation: </label> -->
                 <div id=SituationCheckboxes>
                 </div>
 
+                <label id="WirkungHeading" class=SectionHeading>Wirkung</label>
 
                 <div id=MoodSlider>
-                    <label class="itemLabel brainload" for=brainloadSlider>Brainload: </label>
-                    <div class=sliderValue id=brainloadSliderOutput></div>
-                    <input type="range" min="0" max="100" value="0" step="10" class="slider brainload" id=brainloadSlider name=mood[brainload]>
 
-                    <label class="itemLabel mood" for=moodSlider>Mood: </label>
-                    <div class=sliderValue id=moodSliderOutput></div>
-                    <input type="range" min="0" max="100" value="0" step="10" class="slider mood" id=moodSlider name=mood[mood]>
-                    
-                    <label class="itemLabel motivation" for=motivationSlider>Motivation: </label>
-                    <div class=sliderValue id=motivationSliderOutput></div>
-                    <input type="range" min="0" max="100" value="0" step="10" class="slider motivation" id=motivationSlider name=mood[motivation]>
                 </div>
 
+                <label id="KommentarHeading" class=SectionHeading>Kommentar</label>
+
                 <div class="kommentar mood">
-                    <label class="itemLabel comment" for=comment>Comment: </label>
+                    <!-- <label class="itemLabel comment" for=comment>Comment: </label> -->
                     <textarea name="comment" id="comment"></textarea>
                 </div>
                 <br>
@@ -218,7 +213,6 @@
             </fieldset>
         </form>
     </div>
-    <script></script>
 </body>
 
 
@@ -297,7 +291,15 @@
 <!-- 
 
 
-
+                   <label class="itemLabel brainload" for=brainloadSlider>Brainload: </label>
+                    <div class=sliderValue id=brainloadSliderOutput></div>
+                    <input type="range" min="0" max="100" value="0" step="10" class="slider brainload" id=brainloadSlider name=mood[brainload]>
+                    <label class="itemLabel mood" for=moodSlider>Mood: </label>
+                    <div class=sliderValue id=moodSliderOutput></div>
+                    <input type="range" min="0" max="100" value="0" step="10" class="slider mood" id=moodSlider name=mood[mood]>
+                    <label class="itemLabel motivation" for=motivationSlider>Motivation: </label>
+                    <div class=sliderValue id=motivationSliderOutput></div>
+                    <input type="range" min="0" max="100" value="0" step="10" class="slider motivation" id=motivationSlider name=mood[motivation]>
 
 
 
